Tried to fix <VBox> width overflow when content centered at least for body (<Window>), FireFox and Chrome.

--- a/src/xp/style/_label.less
+++ b/src/xp/style/_label.less
@@ -6,7 +6,6 @@
 
 .Label {
     align-items: center;
-    background-color: @color-back;
     color: @color-fore;
     cursor: default;
     display: inline-flex;
