--- a/src/xp/style/_placeholder.less
+++ b/src/xp/style/_placeholder.less
@@ -5,6 +5,7 @@
 ----------------*/
 
 .Placeholder {
+    cursor: default;
     display: inline-block;
     flex: 1 1 auto;
     height: 100%;
