--- a/src/xp/style/_scrollbar.less
+++ b/src/xp/style/_scrollbar.less
@@ -39,7 +39,7 @@
     }
 
     &::-webkit-scrollbar-corner {
-        background-color: transparent;
+        background-color: @color-back;
     }
     //
     // IE
