--- a/src/xp/style/_window.less
+++ b/src/xp/style/_window.less
@@ -8,10 +8,11 @@
     background-color: @color-back;
     box-sizing: border-box;
     font-family: @font-family;
-    height: 100%;
     margin: 0;
+    min-height: 100%;
+    min-width: -moz-min-content;
+    min-width: -webkit-min-content;
     padding: 0;
-    width: 100%;
 }
 
 html {
